--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
-<meta charset="utf-8" />
+
 
 <head>
+    <meta charset="utf-8">
+    <title>Твой дом</title>
     <script src="https://code.jquery.com/jquery-3.1.1.js"
             integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
             crossorigin="anonymous" type="text/javascript"></script>
