--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location="#top"">Агентство
-            </li>
+            <li class="sidebar-brand"><button class="btn-link" onclick = "$('#menu-close').click(); window.location.href='#top'">Агентство</li>
             <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location="#top"">Главная
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#top'">Главная
             </li>
             <li>
                 <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">О нас
