Making correct markup.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center" id="contact">
+                <div class="col-lg-10 col-lg-offset-1 text-center" id="contacts">
                     <h4><strong>Твой Дом</strong>
                     </h4>
                     <p>г. Москва<br>Старомонетный переулок, 10</p>
@@ -201,10 +201,10 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://vk.com/"><i class="fa fa-vk fa-fw fa-3x"></a></i>
+                            <a href="https://vk.com/"><i class="fa fa-vk fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="http://example.com/"><i class="fa fa-link fa-fw fa-3x"></a></i>
+                            <a href="http://example.com/"><i class="fa fa-link fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                 </div>
