Making correct markup.

--- a/index.html
+++ b/index.html
@@ -41,21 +41,23 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand"><button class="btn-link" onclick = "$('#menu-close').click(); window.location.href='#top'">Агентство</li>
-            <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#top'">Главная
+            <li class="sidebar-brand">
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location.href='#top'">Агентство</button>
             </li>
             <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">О нас
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#top'">Главная</button>
             </li>
             <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">Услуги
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">О нас</button>
+            </li>
+            <li>
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">Услуги</button>
             </li>
             <!-- <li>
                 <a href="#portfolio" onclick = $("#menu-close").click(); >Портфолио</a>
             </li> -->
             <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#contact'">Контакты
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#contact'">Контакты</button>
             </li>
         </ul>
     </nav>
@@ -160,8 +162,8 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12">
-            <div style="font-size: 30; margin-top: 40; margin-bottom: 20;">Наш офис</div>
-            <img src="img/office place.jpg" width="600" class="img-rounded center-block">
+              <div style="font-size: 30; margin-top: 40; margin-bottom: 20;"><h4>Наш офис</h4></div>
+            <img src="img/office_place.jpg" width="600" class="img-rounded center-block" alt="Фото офиса Твой дом">
           </div>
         </div>
       </div>
