--- a/index.html
+++ b/index.html
@@ -20,28 +20,21 @@
           crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.js"></script>
-    <![endif]-->
+
 </head>
 
 <body>
 
     <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <a id="menu-toggle" href="\\#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location.href='#top'">Агентство</button>
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#top'">Агентство</button>
+                <button class="btn-link close-menu" onclick = "$('#menu-close').click()"><i class="fa fa-times"></i></button>
             </li>
             <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#top'">Главная</button>
-            </li>
-            <li>
-                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">О нас</button>
+                <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#about'">О нас</button>
             </li>
             <li>
                 <button class="btn-link" onclick = "$('#menu-close').click(); window.location='#services'">Услуги</button>
@@ -54,6 +47,7 @@
             </li>
         </ul>
     </nav>
+
 
     <!-- Header -->
     <header id="top" class="header">
@@ -151,6 +145,22 @@
     <section id="contact">
       <div id="map" class="map" style="width: 100%; height: 100%"></div>
 
+        <script type="text/javascript">
+      ymaps.ready(init);
+      function init(){
+        var map = new ymaps.Map("map", {
+                center: [55.740684, 37.618174],
+                zoom: 15
+            });
+        map.behaviors.disable('scrollZoom');
+        placemark = new ymaps.Placemark([55.740684, 37.618174], {
+          hintContent: 'Твой Дом',
+          balloonContentHeader: 'Твой Дом',
+          balloonContentBody: 'Москва, Старомонетный переулок, 10'
+        });
+        map.geoObjects.add(placemark);
+      }
+    </script>
 
       <div class="container">
         <div class="row text-center">
@@ -197,24 +207,16 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous" type="text/javascript"></script>
 
+     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.js"></script>
+    <![endif]-->
+
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 
-    <script type="text/javascript">
-      ymaps.ready(init);
-      function init(){
-        var map = new ymaps.Map("map", {
-                center: [55.740684, 37.618174],
-                zoom: 15
-            });
-        map.behaviors.disable('scrollZoom');
-        placemark = new ymaps.Placemark([55.740684, 37.618174], {
-          hintContent: 'Твой Дом',
-          balloonContentHeader: 'Твой Дом',
-          balloonContentBody: 'Москва, Старомонетный переулок, 10'
-        });
-        map.geoObjects.add(placemark);
-      }
-    </script>
+
 
     <!-- Custom Theme JavaScript -->
     <script>
