--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
     <![endif]-->
 
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-
+    <script src="js/map.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 
 </html>
